--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 aqimon = "aqimon.server:start"
+aqimond = "aqimon.server:debug"
