--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: Python package
 on:
   push:
-    tags:
-      - "v*.*.*"
+    branches:
+      - '**'        # matches every branch
+      - '!main'    # excludes main
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,11 +12,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup just
         uses: extractions/setup-just@v1
-      - name: Setup Elm
-        uses: jorelali/setup-elm@v5
-      - name: Compile Elm
-        run: just build
-      - name: Build and publish to pypi
-        uses: JRubics/poetry-publish@v1.16
+      - uses: sparksp/elm-format-action@v1
         with:
-          pypi_token: ${{ secrets.PYPI_TOKEN }}
+            elm_files: |
+              elm/src/
+      - name: Compile Elm
+        run: just check
