--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup just
         uses: extractions/setup-just@v1
-      - uses: sparksp/elm-format-action@v1
+      - uses: actions/setup-node@v3
         with:
-            elm_files: |
-              elm/src/
+            # Node needed for elm-format
+            node-version: 18
+      - name: elm-format install
+        run: npm elm-format install
       - name: Compile Elm
         run: just check
