--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: Python package
 on:
   push:
-    branches:
-      - '**'        # matches every branch
-      - '!main'    # excludes main
-
+    tags:
+      - "v*.*.*"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,11 +10,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup just
         uses: extractions/setup-just@v1
-      - uses: actions/setup-node@v3
-        with:
-            # Node needed for elm-format
-            node-version: 18
-      - name: elm-format install
-        run: npm elm-format install
+      - name: Setup Elm
+        uses: jorelali/setup-elm@v5
       - name: Compile Elm
-        run: just check
+        run: just build
+      - name: Build and publish to pypi
+        uses: JRubics/poetry-publish@v1.16
+        with:
+          pypi_token: ${{ secrets.PYPI_TOKEN }}
