--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,5 +18,5 @@ jobs:
             node-version: 18
       - name: elm-format install
         run: npm install elm-format
-      - name: Compile Elm
-        run: just check
+      - name: Check linting
+        run: just lint
