--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,11 +12,15 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup just
         uses: extractions/setup-just@v1
+      - name: Install poetry
+        uses: Gr1N/setup-poetry@v8
       - uses: actions/setup-node@v3
         with:
             # Node needed for elm-format
             node-version: 18
       - name: elm-format install
         run: npm install elm-format
+      - name: Install dev dependencies
+        run: poetry install --only=dev
       - name: Check linting
         run: just lint
