--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Install dev dependencies
         run: poetry install --only=dev
         env:
-          POETRY_VIRTUALENVS_CREATE=false
+          POETRY_VIRTUALENVS_CREATE: false
       - name: Check linting
         run: just lint
