--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,6 +12,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup just
         uses: extractions/setup-just@v1
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
       - name: Install poetry
         uses: Gr1N/setup-poetry@v8
       - uses: actions/setup-node@v3
