--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,7 +6,7 @@ on:
       - '!main'    # excludes main
 
 jobs:
-  build:
+  checkpr:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
