--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,3 +7,10 @@ repos:
     rev: v1.1.1
     hooks:
     -   id: mypy
+-   repo: local
+    hooks:
+    -   id: elm-format
+        name: elm-format
+        entry: elm-format --yes
+        language: system
+        files: .*\.elm
