--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,9 @@
 repos:
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+    # Ruff version.
+  rev: 'v0.0.257'
+  hooks:
+      - id: ruff
 -   repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
