--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ fastapi-utils = "^0.2.1"
 ruff = "^0.0.256"
 black = "^23.1.0"
 mypy = "^1.1.1"
+pytest = "^7.3.1"
+pytest-asyncio = "^0.21.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -32,6 +34,9 @@ aqimond = "aqimon.server:debug"
 select = ["E", "F", "D"]
 ignore = ["D203", "D213"]
 line-length = 120
+
+[tool.ruff.per-file-ignores]
+"tests/*" = ["D103", "D104", "D100"]  # We dont need docstrings in tests
 
 [tool.black]
 line-length = 120
