--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ ignore = ["D203", "D213"]
 line-length = 120
 
 [tool.ruff.per-file-ignores]
-"tests/*" = ["D103", "D104", "D100"]  # We dont need docstrings in tests
+"tests/*" = ["D100", "D101", "D102", "D103", "D104" ]  # We dont need docstrings in tests
 
 [tool.black]
 line-length = 120
