--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ jobs:
         uses: extractions/setup-just@v1
       - name: Setup Elm
         uses: jorelali/setup-elm@v5
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
       - name: Install poetry
         uses: Gr1N/setup-poetry@v8
       - name: Install dev dependencies
